2013-05-02  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/INSTALL: Update NestedVM build manual - it doesn't build with
  --enable-ide.


2013-04-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* Makefile.in: Use printf instead of echo -e - more portable (and -e didn't
  work on GNU Make 3.81).


2013-04-23  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* artifact.[ch], atari.c, atari800.man, cfg.c, configure.ac,
  pal_blending.[ch], ui.c, videomode.[ch], sdl/video_gl.c, sdl/video.sw.c,
  sdl/video.c, DOC/USAGE, amiga/makefile, dc/Makefile.dc,
  win32/msc/Makefile: New module, artifact.c, which manages settings of all
  artifacting modes. Artifacting modes are now stored independently for PAL
  and NTSC modes, and set according to the current TV mode setting.

* sdl/main.c, sdl/video.c: When in monitor, avoid reopening the SDL window
  during stepping through code.


2013-04-15  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours_pal.[ch], colours.[ch], configure.ac, pal_blending.[ch], platform.h,
  ui.c, sdl/palette.[ch], sdl/video_gl.[ch], sdl/video_sw.[ch], sdl.video.[ch]:
  Added accurate emulation of PAL delay line (PAL blending).


2013-04-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* antic.[ch], gtia.c, ui.c: Improve the existing PAL blending implementation,
  which worked only on lines in GTIA mode 9 and was erroneously called
  "GTIA11_DELAY". Previously it only blended lines placed below GTIA 11 lines,
  now it works on all grasycale pixels. PAL blending now can be switched
  on/off - see "Display settings->TV effect" (renamed from "NTSC artifacting
  quality", as this option is no longer NTSC-specific).


2013-04-07  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* colours_pal.c: More accurate emulation of PAL colours based on analysis of
  oscillograms of PAL GTIA output.

* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Added support
  for the cartridge mapping used by "Turbo Hit"/"Atari Blizzard Hit".
